# mit-lint

./: .fastconventional.yaml  .gitignore  .mergify.yml  .versio.yaml  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  cliff.toml  cog.toml  renovate.json  rustfmt.toml
.forgejo/workflows/: ci.yml  publish.yml  test-and-tag.yml
.github/workflows/: test-and-tag.yml
.woodpecker/: deploy.yaml  fix.yaml  lint.yaml  release.yaml  test.yaml
benches/: async_linting.rs  linting.rs
ci/: concourse.yaml
src/: config.rs  lib.rs
src/checks/: body_wider_than_72_characters.rs  body_wider_than_72_characters_test.rs  duplicate_trailers.rs  duplicate_trailers_test.rs  missing_github_id.rs  missing_github_id_test.rs  missing_gitlab_id.rs  missing_jira_issue_key.rs  missing_jira_issue_key_test.rs  missing_pivotal_tracker_id.rs  missing_pivotal_tracker_id_test.rs  mod.rs  not_conventional_commit.rs  not_conventional_commit_test.rs  not_emoji_log.rs  not_emoji_log_test.rs  subject_line_ends_with_period.rs  subject_line_ends_with_period_test.rs  subject_longer_than_72_characters.rs  subject_longer_than_72_characters_test.rs  subject_not_capitalized.rs  subject_not_capitalized_test.rs  subject_not_separate_from_body.rs  subject_not_separate_from_body_test.rs
src/cmd/: async_lint.rs  lint.rs  mod.rs
src/model/: code.rs  lint.rs  lint_test.rs  lints.rs  lints_test.rs  mod.rs  problem.rs  problem_builder.rs  problem_test.rs  serde_regex.rs
tests/: serializable_config.rs
