[package]
name = "mit-lint"
version = "3.4.0"
edition = "2024"
authors = ["Billie Thompson <billie+mit-lint@billiecodes.com>"]
license = "CC0-1.0"
description = "Lints for commits parsed with mit-commit."
categories = ["development-tools"]
keywords = ["git", "commit", "lints"]
readme = "README.md"
repository = "https://codeberg.org/PurpleBooth/mit-lint"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.12"
mit-commit = "3.3.0"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8.22"
futures = "0.3.31"
quickcheck = "1.0.3"
strum_macros = "0.27.1"

[dev-dependencies]
criterion = { version = "=0.7.0", features = ["async_tokio"] }
quickcheck = "=1.0.3"
quickcheck_macros = "=1.1.0"
tokio = { version = "=1.47.1", features = ["full"] }

[[bench]]
name = "linting"
harness = false
[[bench]]
name = "async_linting"
harness = false
