[package]
name = "mit-lint"
version = "4.0.2"
edition = "2024"
authors = ["Billie Thompson <billie+mit-lint@billiecodes.com>"]
license = "CC0-1.0"
description = "Lints for commits parsed with mit-commit."
categories = ["development-tools"]
keywords = ["git", "commit", "lints"]
readme = "README.md"
repository = "https://codeberg.org/PurpleBooth/mit-lint"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
mit-commit = "3.3.2"
regex = "1.12.4"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.2"
futures = "0.3.32"
quickcheck = "1.1.0"
strum_macros = "0.28.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
tokio = { version = "1.52.3", features = ["full"] }

[[bench]]
name = "linting"
harness = false
[[bench]]
name = "async_linting"
harness = false
