[package]
name = "mit-lint"
version = "4.1.0"
edition = "2024"
authors = ["Billie Thompson <billie+mit-lint@billiecodes.com>"]
license = "CC0-1.0"
description = "Lints for commits parsed with mit-commit."
categories = ["development-tools"]
keywords = ["git", "commit", "lints"]
readme = "README.md"
repository = "https://codeberg.org/PurpleBooth/mit-lint"

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
mit-commit = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
toml = "1"
futures = "0.3"
quickcheck = "1"
strum_macros = "0.28"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "linting"
harness = false
[[bench]]
name = "async_linting"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
